# upnp-av-control

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml  renovate.json  setup.cfg  setup.py  uvicorn-log-config.yml
.github/: dependabot.yml
.github/workflows/: combine-prs.yml  publish-nightly-testpipy.yml  python.yml  release.yml  test-backend.yml  test-frontend.yml  testing.yml
UpnpAVControl/mediaserver/: didllite.py
doc/source/: conf.py  dev.rst  index.rst
frontend/: .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .travis.yml  LICENSE.md  README.md  craco.config.js  index.html  jest.config.js  nuxt.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vue.config.js
frontend/.github/: dependabot.yml
frontend/components/: LibraryListItem.vue  MiniPlayer.vue  Player.vue  PlayerSelection.vue  TopBar.vue
frontend/config/: webpack.common.js  webpack.dev.js
frontend/pages/: index.vue  player.vue  select-player.vue
frontend/plugins/: control-point-event-bus.client.js  upnpapi.client.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  App.vue  controlpoint-event-bus.js  custom-hooks.ts  index.css  main.js  setupProxy.js  setupProxy.js.bak  store.js  svgTransform.js  upnpapi.js
frontend/store/: players.js
frontend/tests/: LoadSpinner.spec.js  MediaLibraryDeviceList.spec.js  TheAppBar.spec.js  controlpoint-event-bus.spec.js  store.spec.js  svgTransform.js  upnpapi.spec.js
frontend/upnpapi/: event_bus.ts  index.ts  jsonrpc.ts  library.ts  player.ts  types.ts  utils.ts
frontend_old/: .editorconfig  jest.config.js  package-lock.json  package.json
frontend_old/public/: index.html
frontend_old/src/: controlpoint-event-bus.js  jsonrpc.ts  store.js  theme.scss
frontend_old/tests/: jsonrpc.spec.js  store.spec.js  svgTransform.js  upnpapi.spec.js
tests/: advertisement_data.py  conftest.py  device_mocks.py  mock_utils.py  test_didllite.py  test_discovery.py  test_dummy.py  test_event_bus.py  test_media_proxy.py  test_media_renderer.py  test_observable.py  test_webapi.py  unused_webapi.py
tests/bdd/: api_utils.py  async_utils.py  common_steps.py  conftest.py  context.py  discovery.feature  fake_devices.py  json_rpc_connection.py  media_renderer_api.feature  media_server_api.feature  playback.feature  test_discovery.py  test_media_renderer_api.py  test_media_server_api.py  test_playback.py  test_renderer_state_notifications.py
tests/data/: dmr_99_1.xml  dmr_avts_99_1.xml  dmr_cms_99_1.xml  dmr_rcs_99_1.xml  dms_99_2.xml
tests/fixtures/: __init__.py  discovery_mocks.py  fixtures.py  upnp_device_mocks.py  upnp_event_mocks.py  upnp_test_requester.py
tests/testsupport/: __init__.py  advertisement_data.py  asyncmock_stub.py  notification_test_endpoint.py  null_advertisement_listener.py  upnp_device_mocks.py  upnp_test_requester.py
tests/unit/: advertisement_data.py  test_didllite.py  test_discovery.py  test_discovery_event_observable.py  test_json_api.py  test_json_rpc.py  test_library.py  test_media_renderer.py  test_observable.py  test_playback.py  test_playbackcontroller.py  (+1 more)
upnpavcontrol/: __init__.py  discover.py
web-frontend/: README.md  package-lock.json  package.json  vue.config.js
(+125 files in other folders)
