[tool.poetry]
name = "upnpavcontrol"
version = "0.0.2"
description = "Web UPNP AV control point"
authors = ["Michael Meier <michael-meier@bluesheep.de>"]
license = "MIT License"
classifiers=[
          "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License",
          "Operating System :: OS Independent", "Development Status :: 2 - Pre-Alpha",
          "Topic :: Multimedia :: Sound/Audio :: Players"
      ]
readme = "README.md"
homepage = "https://github.com/mikedevnull/upnp-av-control"
repository = "https://github.com/mikedevnull/upnp-av-control"
packages = [
    { include = "upnpavcontrol" }
]
include = ['upnpavcontrol/web/static/**/*']

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
async-upnp-client = "^0.23.5"
fastapi = "^0.73.0"
websockets = "^10.1"
defusedxml = "^0.7.1"
uvicorn = "^0.17.4"
colorlog = "^6.6.0"
itsdangerous = "^2.0.1"
PyYAML = "^6.0"
aiofiles = {version = "^0.8.0", python = ">=3.7"}
typing-extensions = {version = "^4.1.1", python = "3.7"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.1"
pytest-bdd = "^5.0.0"
async-asgi-testclient = "^1.4.9"
flake8 = "^4.0.1"
flake8-print = "^4.0.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
    
[tool.poetry-dynamic-versioning]
enable = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.dev{{ distance }}{% endif %}"

[tool.poetry.scripts]
upnp-av-web-cp = "upnpavcontrol.tools.web_control_point:main"